added start/stop buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <h1>Can you find the US state from its nickname?</h1>
   <div class="game-container">
+    <button onclick="start()">Start</button>
+    <button onclick="stop()">Stop</button>
+    <p id="timer">0:00</p>
+    <p id="current-state">Heart of Dixie</p>
     <div class="button-container">
       <button type="button" class="btn">Alabama</button>
       <button type="button" class="btn">Alaska</button>
@@ -67,4 +71,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
