--- a/index.html
+++ b/index.html
@@ -13,59 +13,61 @@
   <div class="game-container">
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
-    <p id="timer">0:00</p>
-    <p id="current-state">Heart of Dixie</p>
+    <p id="info">Time: <span id="timer">0:00<span>, Score: <span id="score">0</span>/50</p>
+    <p id="current-state">Press "Start" to begin.</p>
+    <button onclick="previous()">Prev</button>
+    <button onclick="next()">Next</button>
     <div class="button-container">
-      <button type="button" class="btn">Alabama</button>
-      <button type="button" class="btn">Alaska</button>
-      <button type="button" class="btn">Arizona</button>
-      <button type="button" class="btn">Arkansas</button>
-      <button type="button" class="btn">California</button>
-      <button type="button" class="btn">Colorado</button>
-      <button type="button" class="btn">Connecticut</button>
-      <button type="button" class="btn">Delaware</button>
-      <button type="button" class="btn">Florida</button>	
-      <button type="button" class="btn">Georga</button>
-      <button type="button" class="btn">Hawaii</button>
-      <button type="button" class="btn">Idaho</button>
-      <button type="button" class="btn">Illinois</button>
-      <button type="button" class="btn">Indiana</button>	
-      <button type="button" class="btn">Iowa</button>
-      <button type="button" class="btn">Kansas</button>	
-      <button type="button" class="btn">Kentucky</button>
-      <button type="button" class="btn">Louisiana</button>	
-      <button type="button" class="btn">Maine</button>	
-      <button type="button" class="btn">Maryland</button>	
-      <button type="button" class="btn">Massachusetts</button>	
-      <button type="button" class="btn">Michigan</button>	
-      <button type="button" class="btn">Minnesota</button>	
-      <button type="button" class="btn">Mississippi</button>	
-      <button type="button" class="btn">Missouri</button>
-      <button type="button" class="btn">Montana</button>	
-      <button type="button" class="btn">Nebraska</button>	
-      <button type="button" class="btn">Nevada</button>	
-      <button type="button" class="btn">New Hampshire</button>	
-      <button type="button" class="btn">New Jersey</button>	
-      <button type="button" class="btn">New Mexico</button>	
-      <button type="button" class="btn">New York</button>	
-      <button type="button" class="btn">North Carolina</button>	
-      <button type="button" class="btn">North Dakota</button>	
-      <button type="button" class="btn">Ohio</button>	
-      <button type="button" class="btn">Oklahoma</button>	
-      <button type="button" class="btn">Oregon</button>	
-      <button type="button" class="btn">Pennsylvania</button>	
-      <button type="button" class="btn">Rhode Island</button>	
-      <button type="button" class="btn">South Carolina</button>	
-      <button type="button" class="btn">South Dakota</button>	
-      <button type="button" class="btn">Tennessee</button>	
-      <button type="button" class="btn">Texas</button>	
-      <button type="button" class="btn">Utah</button>
-      <button type="button" class="btn">Vermont</button>
-      <button type="button" class="btn">Virginia</button>
-      <button type="button" class="btn">Washington</button>
-      <button type="button" class="btn">West Virginia</button>
-      <button type="button" class="btn">Wisconsin</button>
-      <button type="button" class="btn">Wyoming</button>
+      <button id="Alabama"  type="button" class="btn" value="Alabama" onclick="check(this.value)">Alabama</button>
+      <button id="Alaska"  type="button" class="btn" value="Alaska" onclick="check(this.value)">Alaska</button>
+      <button id="Arizona"  type="button" class="btn" value="Arizona" onclick="check(this.value)">Arizona</button>
+      <button id="Arkansas"  type="button" class="btn" value="Arkansas" onclick="check(this.value)">Arkansas</button>
+      <button id="California"  type="button" class="btn" value="California" onclick="check(this.value)">California</button>
+      <button id="Colorado"  type="button" class="btn" value="Colorado" onclick="check(this.value)">Colorado</button>
+      <button id="Connecticut"  type="button" class="btn" value="Connecticut" onclick="check(this.value)">Connecticut</button>
+      <button id="Delaware"  type="button" class="btn" value="Delaware" onclick="check(this.value)">Delaware</button>
+      <button id="Florida"  type="button" class="btn" value="Florida" onclick="check(this.value)">Florida</button>	
+      <button id="Georgia"  type="button" class="btn" value="Georgia" onclick="check(this.value)">Georgia</button>
+      <button id="Hawaii"  type="button" class="btn" value="Hawaii" onclick="check(this.value)">Hawaii</button>
+      <button id="Idaho"  type="button" class="btn" value="Idaho" onclick="check(this.value)">Idaho</button>
+      <button id="Illinois"  type="button" class="btn" value="Illinois" onclick="check(this.value)">Illinois</button>
+      <button id="Indiana"  type="button" class="btn" value="Indiana" onclick="check(this.value)">Indiana</button>	
+      <button id="Iowa"  type="button" class="btn" value="Iowa" onclick="check(this.value)">Iowa</button>
+      <button id="Kansas"  type="button" class="btn" value="Kansas" onclick="check(this.value)">Kansas</button>	
+      <button id="Kentucky"  type="button" class="btn" value="Kentucky" onclick="check(this.value)">Kentucky</button>
+      <button id="Louisiana"  type="button" class="btn" value="Louisiana" onclick="check(this.value)">Louisiana</button>	
+      <button id="Maine"  type="button" class="btn" value="Maine" onclick="check(this.value)">Maine</button>	
+      <button id="Maryland"  type="button" class="btn" value="Maryland" onclick="check(this.value)">Maryland</button>	
+      <button id="Massachusetts"  type="button" class="btn" value="Massachusetts" onclick="check(this.value)">Massachusetts</button>	
+      <button id="Michigan"  type="button" class="btn" value="Michigan" onclick="check(this.value)">Michigan</button>	
+      <button id="Minnesota"  type="button" class="btn" value="Minnesota" onclick="check(this.value)">Minnesota</button>	
+      <button id="Mississippi"  type="button" class="btn" value="Mississippi" onclick="check(this.value)">Mississippi</button>	
+      <button id="Missouri"  type="button" class="btn" value="Missouri" onclick="check(this.value)">Missouri</button>
+      <button id="Montana"  type="button" class="btn" value="Montana" onclick="check(this.value)">Montana</button>	
+      <button id="Nebraska"  type="button" class="btn" value="Nebraska" onclick="check(this.value)">Nebraska</button>	
+      <button id="Nevada"  type="button" class="btn" value="Nevada" onclick="check(this.value)">Nevada</button>	
+      <button id="New Hampshire"  type="button" class="btn" value="New Hampshire" onclick="check(this.value)">New Hampshire</button>	
+      <button id="New Jersey"  type="button" class="btn" value="New Jersey" onclick="check(this.value)">New Jersey</button>	
+      <button id="New Mexico"  type="button" class="btn" value="New Mexico" onclick="check(this.value)">New Mexico</button>	
+      <button id="New York"  type="button" class="btn" value="New York" onclick="check(this.value)">New York</button>	
+      <button id="North Carolina"  type="button" class="btn" value="North Carolina" onclick="check(this.value)">North Carolina</button>	
+      <button id="North Dakota"  type="button" class="btn" value="North Dakota" onclick="check(this.value)">North Dakota</button>	
+      <button id="Ohio"  type="button" class="btn" value="Ohio" onclick="check(this.value)">Ohio</button>	
+      <button id="Oklahoma"  type="button" class="btn" value="Oklahoma" onclick="check(this.value)">Oklahoma</button>	
+      <button id="Oregon"  type="button" class="btn" value="Oregon" onclick="check(this.value)">Oregon</button>	
+      <button id="Pennsylvania"  type="button" class="btn" value="Pennsylvania" onclick="check(this.value)">Pennsylvania</button>	
+      <button id="Rhode Island"  type="button" class="btn" value="Rhode Island" onclick="check(this.value)">Rhode Island</button>	
+      <button id="South Carolina"  type="button" class="btn" value="South Carolina" onclick="check(this.value)">South Carolina</button>	
+      <button id="South Dakota"  type="button" class="btn" value="South Dakota" onclick="check(this.value)">South Dakota</button>	
+      <button id="Tennessee"  type="button" class="btn" value="Tennessee" onclick="check(this.value)">Tennessee</button>	
+      <button id="Texas"  type="button" class="btn" value="Texas" onclick="check(this.value)">Texas</button>	
+      <button id="Utah"  type="button" class="btn" value="Utah" onclick="check(this.value)">Utah</button>
+      <button id="Vermont"  type="button" class="btn" value="Vermont" onclick="check(this.value)">Vermont</button>
+      <button id="Virginia"  type="button" class="btn" value="Virginia" onclick="check(this.value)">Virginia</button>
+      <button id="Washington"  type="button" class="btn" value="Washington" onclick="check(this.value)">Washington</button>
+      <button id="West Virginia"  type="button" class="btn" value="West Virginia" onclick="check(this.value)">West Virginia</button>
+      <button id="Wisconsin"  type="button" class="btn" value="Wisconsin" onclick="check(this.value)">Wisconsin</button>
+      <button id="Wyoming"  type="button" class="btn" value="Wyoming" onclick="check(this.value)">Wyoming</button>
     </div>
   </div>
   <script src="script.js"></script>
