cleaned code formatting on index.html

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
       <button id="Alaska" type="button" class="btn" value="Alaska" onclick="check(this.value)">Alaska</button>
       <button id="Arizona" type="button" class="btn" value="Arizona" onclick="check(this.value)">Arizona</button>
       <button id="Arkansas" type="button" class="btn" value="Arkansas" onclick="check(this.value)">Arkansas</button>
-      <button id="California" type="button" class="btn" value="California"
-        onclick="check(this.value)">California</button>
+      <button id="California" type="button" class="btn" value="California" onclick="check(this.value)">California</button>
       <button id="Colorado" type="button" class="btn" value="Colorado" onclick="check(this.value)">Colorado</button>
-      <button id="Connecticut" type="button" class="btn" value="Connecticut"
-        onclick="check(this.value)">Connecticut</button>
+      <button id="Connecticut" type="button" class="btn" value="Connecticut" onclick="check(this.value)">Connecticut</button>
       <button id="Delaware" type="button" class="btn" value="Delaware" onclick="check(this.value)">Delaware</button>
       <button id="Florida" type="button" class="btn" value="Florida" onclick="check(this.value)">Florida</button>
       <button id="Georgia" type="button" class="btn" value="Georgia" onclick="check(this.value)">Georgia</button>
@@ -41,47 +39,34 @@
       <button id="Louisiana" type="button" class="btn" value="Louisiana" onclick="check(this.value)">Louisiana</button>
       <button id="Maine" type="button" class="btn" value="Maine" onclick="check(this.value)">Maine</button>
       <button id="Maryland" type="button" class="btn" value="Maryland" onclick="check(this.value)">Maryland</button>
-      <button id="Massachusetts" type="button" class="btn" value="Massachusetts"
-        onclick="check(this.value)">Massachusetts</button>
+      <button id="Massachusetts" type="button" class="btn" value="Massachusetts" onclick="check(this.value)">Massachusetts</button>
       <button id="Michigan" type="button" class="btn" value="Michigan" onclick="check(this.value)">Michigan</button>
       <button id="Minnesota" type="button" class="btn" value="Minnesota" onclick="check(this.value)">Minnesota</button>
-      <button id="Mississippi" type="button" class="btn" value="Mississippi"
-        onclick="check(this.value)">Mississippi</button>
+      <button id="Mississippi" type="button" class="btn" value="Mississippi" onclick="check(this.value)">Mississippi</button>
       <button id="Missouri" type="button" class="btn" value="Missouri" onclick="check(this.value)">Missouri</button>
       <button id="Montana" type="button" class="btn" value="Montana" onclick="check(this.value)">Montana</button>
       <button id="Nebraska" type="button" class="btn" value="Nebraska" onclick="check(this.value)">Nebraska</button>
       <button id="Nevada" type="button" class="btn" value="Nevada" onclick="check(this.value)">Nevada</button>
-      <button id="New Hampshire" type="button" class="btn" value="New Hampshire" onclick="check(this.value)">New
-        Hampshire</button>
-      <button id="New Jersey" type="button" class="btn" value="New Jersey" onclick="check(this.value)">New
-        Jersey</button>
-      <button id="New Mexico" type="button" class="btn" value="New Mexico" onclick="check(this.value)">New
-        Mexico</button>
+      <button id="New Hampshire" type="button" class="btn" value="New Hampshire" onclick="check(this.value)">New Hampshire</button>
+      <button id="New Jersey" type="button" class="btn" value="New Jersey" onclick="check(this.value)">New Jersey</button>
+      <button id="New Mexico" type="button" class="btn" value="New Mexico" onclick="check(this.value)">New Mexico</button>
       <button id="New York" type="button" class="btn" value="New York" onclick="check(this.value)">New York</button>
-      <button id="North Carolina" type="button" class="btn" value="North Carolina" onclick="check(this.value)">North
-        Carolina</button>
-      <button id="North Dakota" type="button" class="btn" value="North Dakota" onclick="check(this.value)">North
-        Dakota</button>
+      <button id="North Carolina" type="button" class="btn" value="North Carolina" onclick="check(this.value)">North Carolina</button>
+      <button id="North Dakota" type="button" class="btn" value="North Dakota" onclick="check(this.value)">North Dakota</button>
       <button id="Ohio" type="button" class="btn" value="Ohio" onclick="check(this.value)">Ohio</button>
       <button id="Oklahoma" type="button" class="btn" value="Oklahoma" onclick="check(this.value)">Oklahoma</button>
       <button id="Oregon" type="button" class="btn" value="Oregon" onclick="check(this.value)">Oregon</button>
-      <button id="Pennsylvania" type="button" class="btn" value="Pennsylvania"
-        onclick="check(this.value)">Pennsylvania</button>
-      <button id="Rhode Island" type="button" class="btn" value="Rhode Island" onclick="check(this.value)">Rhode
-        Island</button>
-      <button id="South Carolina" type="button" class="btn" value="South Carolina" onclick="check(this.value)">South
-        Carolina</button>
-      <button id="South Dakota" type="button" class="btn" value="South Dakota" onclick="check(this.value)">South
-        Dakota</button>
+      <button id="Pennsylvania" type="button" class="btn" value="Pennsylvania" onclick="check(this.value)">Pennsylvania</button>
+      <button id="Rhode Island" type="button" class="btn" value="Rhode Island" onclick="check(this.value)">Rhode Island</button>
+      <button id="South Carolina" type="button" class="btn" value="South Carolina" onclick="check(this.value)">South Carolina</button>
+      <button id="South Dakota" type="button" class="btn" value="South Dakota" onclick="check(this.value)">South Dakota</button>
       <button id="Tennessee" type="button" class="btn" value="Tennessee" onclick="check(this.value)">Tennessee</button>
       <button id="Texas" type="button" class="btn" value="Texas" onclick="check(this.value)">Texas</button>
       <button id="Utah" type="button" class="btn" value="Utah" onclick="check(this.value)">Utah</button>
       <button id="Vermont" type="button" class="btn" value="Vermont" onclick="check(this.value)">Vermont</button>
       <button id="Virginia" type="button" class="btn" value="Virginia" onclick="check(this.value)">Virginia</button>
-      <button id="Washington" type="button" class="btn" value="Washington"
-        onclick="check(this.value)">Washington</button>
-      <button id="West Virginia" type="button" class="btn" value="West Virginia" onclick="check(this.value)">West
-        Virginia</button>
+      <button id="Washington" type="button" class="btn" value="Washington" onclick="check(this.value)">Washington</button>
+      <button id="West Virginia" type="button" class="btn" value="West Virginia" onclick="check(this.value)">West Virginia</button>
       <button id="Wisconsin" type="button" class="btn" value="Wisconsin" onclick="check(this.value)">Wisconsin</button>
       <button id="Wyoming" type="button" class="btn" value="Wyoming" onclick="check(this.value)">Wyoming</button>
     </div>
